Docker/DockerSamplePractice/docker_app1/docker_app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-app1
  template:
    metadata:
      name: docker-app1
      labels:
        app: docker-app1
    spec:
      containers:
        - image: docker_app1:0.1
          name: docker-app1
