Docker/DockerSamplePractice/docker_app1/docker_app1_service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-app1-service
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: docker-app1
