Docker/DockerSamplePractice/docker_app1/docker_app1_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-app1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: demo.dockerapp1.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific 
        backend:
          service:
            name: docker-app1-service
            port:
              number: 80
